--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,8 @@ padding: 1rem;box-shadow:var(--shadow);z-index: 100;}
 .rightMenu{display:grid;grid-template-columns:70% 30%;position: absolute;top: 15px;
 right: 30px;grid-gap:10px;text-align: right;}
 .fa-bars{font-size: 2rem;color: var(--bgFontColor);cursor: pointer;}
-.selectBar{border-radius: 16px;padding: 0rem 0.5rem;border: none;outline: none;cursor: pointer;}
+.selectBar{border-radius: 16px;padding: 0rem 0.5rem;border: none;outline: none;cursor: pointer;
+border: 2px solid #fff;background-color: var(--bgColor);color: var(--bgFontColor)}
 .menulist{list-style: none;width: 50%;height: 100vh;background-color: var(--bgColor);padding: 1rem;position: absolute;left: 0;top: 0;box-shadow: var(--shadow);display: grid;justify-content: center;align-items: center;transform: translateX(-100%);transition: all 0.5s;z-index: 100;
 font-family:var(--font2);}
 .mask{width: 100%;height: 100vh;background-color:rgb(0 0 0 / 60%);position: absolute;left: 0;top: 0;
